--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ subprojects {
     apply plugin: 'java'
 
     dependencies {
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
         implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.2.0'
         implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'
         implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
     }
 
 }
