--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,21 @@ plugins {
 
 allprojects {
     group 'com.eventstreaming'
-    version '1.0-SNAPSHOT'
+    version '1.0.0'
     repositories {
         mavenCentral()
     }
 }
 
 subprojects {
-    sourceCompatibility = 11
+    sourceCompatibility = 17
     apply plugin: 'java'
 
     dependencies {
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
-        implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.2.0'
-        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'
-        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
-        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+        implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.5.1'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.8'
+        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
     }
-
 }
